Big commit adding the new Search functionality with ElasticSearch and the EFOTrait_Ontology model
